Fixed changes in dark mode pr

--- a/about.css
+++ b/about.css
@@ -17,7 +17,7 @@
     --icons-color: #d6a52b;
     --footer-text: #4a4a4a;
     --card-text: #333;
-    --card-bg: #f7f7f7;
+    --card-bg: #fdf4dc;
     --back-button-color: #333;
 }
 
