--- a/pricing.css
+++ b/pricing.css
@@ -10,7 +10,7 @@ body {
 :root {
     --body-bg: antiquewhite;
     --primary-color: white;
-    --heading-color: #d6a52b;
+    --heading-color: #8b4513;
     --container-text: #6f6f6f;
     --card-bg: #fdf4dc;
     --card-text: #191970;
